...
            android:padding="16dp"
            android:textSize="12sp"
            android:background="@drawable/story_container"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:gravity="start"
        android:maxLines="3"
...
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/pv_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_upload"
        android:textAllCaps="false"
        android:textSize="16sp"
...
