...
            android:layout_marginEnd="16dp"
            tools:listitem="@layout/item_row_story"
            android:background="@color/white" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/content_description_action_button"
        android:text="@string/text_action"
        android:textColor="@color/black"
...
        app:layout_constraintBottom_toTopOf="@id/fab_change_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/content_description_add_story"
        app:fabSize="normal"
...
