...
            android:id="@+id/btn_gallery"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/content_description_upload_from_gallery"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/cl_bottom"
            app:layout_constraintEnd_toStartOf="@+id/btn_take_photo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_image"
            app:tint="@color/white" />

        <ImageView
...
